Editing metadata_templates::batery_cycle.yml
Converting all battery-related fields to subfields under a larger 
'battery' field.

--- a/ecsopendata/metadata_templates/battery_cycle.yml
+++ b/ecsopendata/metadata_templates/battery_cycle.yml
@@ -26,23 +26,25 @@ c-rate:
 voltage:
     min:
     max:
-anode:
-    material:
-    thickness:
-    porosity:
-cathode:
-    material:
-    thickness:
-    porosity:
-electrolyte:
-    solvent:
-    salt:
-    molarity:
-    separator:
+battery:
+    source:
+    capacity:
+    anode:
         material:
         thickness:
         porosity:
-battery_manufacturer:
+    cathode:
+        material:
+        thickness:
+        porosity:
+    electrolyte:
+        solvent:
+        salt:
+        molarity:
+        separator:
+            material:
+            thickness:
+            porosity:
 temperature:
     min:
     max:
