--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,19 @@ branches:
 
 # list of commands to run to setup the environment
 install:
-    - pip install coverage
-    - pip install coveralls
-    - pip install flake8
-    - pip install -r requirements.txt
-
+    - sudo apt-get update
+    - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+    - bash miniconda.sh -b -p $HOME/miniconda
+    - export PATH="$HOME/miniconda/bin:$PATH"
+    - hash -r
+    - conda config --set always_yes yes --set changeps1 no
+    - conda update -q conda
+    - conda info -a
+    - conda env create -f environment.yml
+    - source activate ecsopendata
+    - conda install coverage
+    - conda install coveralls
+    - conda install flake8
 
 # a list of commands to run before the main script
 before_script:
