--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ language: python
 
 # specify what versions of python will be used
 # note that all of the versions listed will be tried
-python:
-    - 3.6
+# the below is not supported by conda and instead is
+# set in the environment.yml
+#python:
+#    - 3.6
 
 # what branches should be evaluated
 branches:
